K8S-Lab-Week2/lab6-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-demo
  labels:
    app: web
spec:
  containers:
    - name: nginx
      image: nginx:1.25
      ports:
        - containerPort: 80
