K8S-Lab-Week2/lab9-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-to-server
  namespace: week2
spec:
  podSelector:
    matchLabels:
      app: server
  policyTypes:
    - Ingress
